--- a/join_added.html
+++ b/join_added.html
@@ -205,7 +205,6 @@
 
 				<div class="next_btn text-center mt-5 pt-5 mb-5">
 					<button id="join_complete" type="button" class="btn btn-outline-primary btn-lg next-page">가입완료</button>
-
 				</div>
 			</div>
 		</div>
@@ -234,7 +233,15 @@
 						echo	"$('#join_frm').prepend(inputTag);";
 					}
 				?>
-			})
+
+				var len = $("input");
+				console.log(len);
+				for (var i=0; ; )
+				{
+				}
+				
+			});
+
 		});
 
 	</script>
