--- a/user_list.html
+++ b/user_list.html
@@ -80,22 +80,23 @@
 		</div>
 	</div>
  </body>
-
+<form id="user_list_frm">
+	<input name="state"></input>
+</form>
 	<!-- 실행에 필요한 자바스크립트 파일들 -->
 	<!--                                   -->
-
-	<!-- 페이지 이동 스크립트         -->
-	<script src="/resources/js/main.js"></script>
 
 	<script>
 		
 		$(document).ready(function() {
 			
 			$("#logout").on("click",function() {
-				alert("로그인을 해주세요!");
-				sessionStorage.removeItem('identity');
-				console.log(sessionStorage.getItem('identity'));
-				location.href = "/";
+
+				$("#user_list_frm").attr("action","/");
+				
+				$("#user_list_frm").children().val("logout");
+				
+				$("#user_list_frm").submit();
 			});
 		});
 	</script>
